add lib passport and swagger
